# argir

./: .gitignore  README.md  TESTS.md  WEB.md  WEB_README.md  check_saved_files.py  export_argir.py  pyproject.toml  requirements.txt  run_tests.py  saved_stats.py  server.py  test_quality.py  web.py
argir/: __init__.py  canonicalize.py  cli.py  compile_soft.py  diagnostics.py  pipeline.py  prompts.py  repair.py  repair_types.py  reporting.py  soft_ir.py  validate.py
argir/checks/: __init__.py  rules.py  strict.py
argir/core/: model.py
argir/fol/: ast.py  eprover.py  tptp.py  translate.py
argir/metrics/: quality.py
argir/nlp/: llm.py  parse.py
argir/normalize/: canonicalize.py
argir/repairs/: af_enforce.lp  af_enforce.py  fol_abduction.py
argir/report/: render.py
argir/semantics/: af.py  af_clingo.py  clingo_backend.py  clingo_helpers.py  semantics.py
docs/: codebase_explanation.md  design-soft-ir.md  diagnosis_repair.md  fol_translation_explained.md  guide.md  repair_strategies_explained.md  tutorial.md  writeup.md
examples/: circular.txt  rain_example.txt  unsupported.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/saved/: index.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
saved/: README.md
tests/: harness.py  run.py  test_suite.py
tests/cases/: 001_penguin_counterexample.json  002_simple_modus_ponens.json  003_exception_mention_drains.json  004_goal_selection_prefers_quantified.json  005_transitivity_of_universals.json  (+5 more)
web/: __init__.py  run_web.py  web_frontend.py  wsgi.py
(+31 files in other folders)
