[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argir"
version = "0.3.3"
description = "Unified Argument IR (Graph + Structure + FOL) - Clean Slate 0.3.3"
authors = [{name="ARGIR Authors"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pydantic>=1.10"]
