[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argir"
version = "0.3.3"
description = "Unified Argument IR (Graph + Structure + FOL)"
authors = [{name="Nada Amin"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["google-genai", "pydantic>=1.10", "flask>=2.0.0", "gunicorn>=20.0.0"]
